# dfx-extensions

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  compatibility.json  extensions-manifest.json  external-extension-registry.json
.github/workflows/: release.yml
my_project_A72/: CHANGELOG.md  Cargo.toml
my_project_A72/src/: main.rs
my_project_B72/: Cargo.toml
my_project_B72/src/commands/: import.rs  install.rs
nns/: Cargo.toml
nns/src/: main.rs
nns/src/commands/: mod.rs
nns/src/lib/nns/: install_nns.rs
sns/: CHANGELOG.md  Cargo.toml
sns/src/: main.rs
