[package]
name = "my_project_A72"
version = "0.1.8"
description = "sns-cli wrapper"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dfx-core.workspace = true
tokio = { version = "1.23.1", features = ["full"] }
clap = { version = "3.1.6", features = [ "derive", "env" ] }
anyhow = "1.0.56"
fn-error-context = "0.2.0"
tempfile = "3.3.0"
flate2 = { version = "1.0.11", default-features = false, features = ["zlib-ng"] }
reqwest = { version = "0.11.9", default-features = false, features = [ "blocking", "json", "rustls-tls", "native-tls-vendored" ] }
futures-util = "0.3.21"
slog = { version = "2.5.2", features = ["max_level_trace"] }

[package.metadata.release]
# do not publish to crates.io
publish = false
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  # {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
]
