[package]
name = "my_project_B72"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dfx-core.workspace = true
# dfx = { path = "/Users//Desktop/sdk_core/src/dfx" }
tokio = { version = "1.23.1", features = ["full"] }
clap = { version = "3.1.6", features = [ "derive", "env" ] }
anyhow = "1.0.56"
fn-error-context = "0.2.0"
backoff = "0.4.0"
flate2 = { version = "1.0.11", default-features = false, features = ["zlib-ng"] }
futures-util = "0.3.21"
ic-agent = { version = "0.23.0", features = ["reqwest"] }
ic-utils = "0.23.0"
reqwest = { version = "0.11.9", default-features = false, features = [ "blocking", "json", "rustls-tls", "native-tls-vendored" ] }
